--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> All about me!</title>
+    <style>
+        body {
+            background-color: rgb(251, 252, 254);
+            line-height:1;
+        }
+        .heading {
+            text-align: center;
+            margin: .8ch;
+        }
+        .title{
+            text-align: left;
+            color: rgb(66, 139, 207);
+            margin: 2ch;
+        }
+        .heading2{
+            margin: .8ch;
+        }
+    </style>
 </head>
 <body>
-    <h1> About Meghan </h1>
+    <h1 class = "heading"> Meghan Andrews</h1>
+
+    <h4 class = "heading"> <strong> West Greenwich, RI 02817 </strong> <em>- meghan.andrews14@gmail.com </em></h2>
+    <h4 class = "heading"> <em> Linked In:</em><a href="/in/meghan-andrews-856625273."> /in/meghan-andrews-856625273.</a> <em>GitHub:</em> <a href = "mandrews12 (github.com)" >mandrews12 (github.com)</a></h4>
     
+    <h3 class = "title">Education</h3>
+    <h4 class = "heading2"><strong>University of Rhode Island,</strong> North Kingstown</h4>
+    <h6 class = "heading2"><em>September 2022 - May 2026</em></h6>
+    <h5 class = "heading2">General Overview:</h5>
+    <ul>
+        <li>BS Computer Science</li>
+        <li>German and Cyber Security Minor</li>
+        <li>Freshman Year, all semesters and Sophmore Year, first semester   - Dean's List</li>
+        <li>Presidential and IGT Scholarship Recipient</li>
+        <li>3.93 GPA</li>
+    </ul>
+    <h3 class = "title">Technical Skills</h3>
+    <h3 class = "title">Work Experience</h3>
+    <h3 class = "title">Projects</h3>
+    <h3 class = "title">Volunteer Work and Activities</h3>
 </body>
 </html>
