--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meghan's Website</title>
+    <title> Meghan's Website</title>
+
+    <style>
+        body {
+            background-color: rgb(253, 253, 254)
+        }
+    </style>
+
 </head>
 
 <body>
-    <h1> Hello World!</h1>
-    <p> Welcome to my world! </p>
-    <p> Thankyou for visiting! To learn more about me: <a href = "aboutme.html"> <strong>click here</strong></a> </p>
+    <h1> Welcome to my website! </h1>
+
+    <p> I am a sophmore at URI looking for possible internship possitions.</p>
+    <p> To learn more about me: <a href = "aboutme.html"> <strong>click here</strong></a> </p>
+    <p>Thankyou for visiting! </p>
 
 </body>
 
