--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Meghan's Website</title>
+    <title> Meghan's Portfolio</title>
 
     <style>
         body {
@@ -14,10 +14,12 @@
 </head>
 
 <body>
-    <h1> Welcome to my website! </h1>
+    <h1> Welcome to my Portfolio! </h1>
 
-    <p> I am a sophmore at URI looking for possible internship possitions.</p>
-    <p> To learn more about me: <a href = "aboutme.html"> <strong>click here</strong></a> </p>
+    <p> This is a website made from scratch using HTML to showcase my technical skills, projects I have worked on, and hobbies.</p>
+    <p> To learn more about my professional skills: <a href = "aboutme.html"> <strong>click here</strong></a> </p>
+    <p> To learn more about some projects: <a href = "aboutme.html"> <strong>click here</strong></a> </p>
+    <p> To learn more about my hobbies: <a href = "aboutme.html"> <strong>click here</strong></a> </p>
     <p>Thankyou for visiting! </p>
 
 </body>
