--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
     <h1 class = "tHead"> Meghan Andrews</h1>
 
     <h4 class = "tHead"> <strong> West Greenwich, RI 02817 </strong> <em>- meghan.andrews14@gmail.com </em></h2>
-    <h4 class = "tHead"> <em> Linked In:</em><a href="/in/meghan-andrews-856625273."> /in/meghan-andrews-856625273.</a> <em>GitHub:</em> <a href = "mandrews12 (github.com)" >mandrews12 (github.com)</a></h4>
+    <h4 class = "tHead"> <em> Linked In:</em><a href="www.linkedin.com/in/meghan-andrews-856625273" target="_blank"> /in/meghan-andrews-856625273.</a> <em>GitHub:</em> <a href = "mandrews12 (github.com)" target = "_blank">mandrews12 (github.com)</a></h4>
     
     <h3 class = "title"> <u>Education</u></h3>
     <h4 class = "heading2" ><span style='font-weight: bold;'>University of Rhode Island,</span> North Kingstown </h4>
@@ -67,7 +67,7 @@
 
     <h4 class = "heading2" >Hera Art Gallery, Kingston RI - <em> Intern</em></h4>
     <h6 class = "heading2"><em>September 2022 - May 2026</em></h6>
-    
+
     <h3 class = "title"><u>Projects</u></h3>
     <h3 class = "title"><u>Volunteer Work and Activities</u></h3>
 </body>
